fixed contrast issue

--- a/styles.css
+++ b/styles.css
@@ -295,3 +295,6 @@ form textarea {
     padding: 1em; 
     text-align: center;
 }
+#footer a{
+    color: white;
+}
